<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Títulos das activity - telas  -->
    <string name="title_activity_my_home_location">TAXI CALL</string>
    <string name="title_activity_splash_screen">TAXI CALL</string>
    <string name="title_activity_buscando_taxi">BuscandoTaxi</string>
    <string name="title_activity_dados_cliente">Confirme seus dados...</string>
    
    
    <string name="app_name">TAXI CALL</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="txtBtnInicio">Continuar >></string>
    <string name="txtLoading">Aguarde, estamos buscando o seu taxi...</string>
    
    <!--  Strings do formulario DadosClienteActivity -->
    <string name="txtSeuEndereco">Seu endereço:</string>
    <string name="txtReferencia">Referência:</string>
    <string name="txtBtnChamarTaxi">Chamar Taxi</string>

    <!-- Url para acessar WS apartir do emulador -->
    <string name="url_ws1_chamartaxi">http://10.0.2.2:8080/jersey/teste/chamartaxi</string>    
    <string name="urlWSenviarPedido">http://10.0.2.2:8080/jersey/teste/enviarPedido</string>
    <string name="urlWSchecarConfirmacao">http://10.0.2.2:8080/jersey/teste/checarConfirmacao</string>

    <!-- Url para acessa WS apartir do celular do Jonathan-->
    <string name="url_ws2_chamartaxi">http://192.168.1.3:8080/jersey/teste/chamartaxi</string>   
    <string name="urlWSenviarPedido1">http://192.168.1.101:8090/jersey/teste/enviarPedido</string>
    <string name="urlWSchecarConfirmacao1">http://192.168.1.101:8090/jersey/teste/checarConfirmacao</string>
    <string name="cpNomeTaxista"></string>
    <string name="cpPlacaTaxista"></string>
    <string name="title_confirma_pedido"></string>
    <string name="empty"></string>

</resources>